2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/abstract_player_object.cpp:
	* rcsc/player/abstract_player_object.h:
	* rcsc/player/ball_object.cpp:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/self_object.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- サイドや背番号が不明なプレイヤを一意に識別するためのID番号を追加した．IDは観測された順番に割り振られる

2012-05-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_agent.h:
	- FreeformMessageのスマートポインタの型を統一

	* rcsc/coach/coach_player_object.h:
	* rcsc/coach/coach_world_state.cpp:
	* rcsc/common/say_message_parser.cpp:
	* rcsc/player/say_message_builder.cpp:
	- hearで効いたスタミナキャパシティを反映できるようにした

2012-05-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/audio_memory.cpp:
	* rcsc/common/audio_memory.h:
	* rcsc/common/say_message_parser.cpp:
	* rcsc/common/say_message_parser.h:
	* rcsc/player/say_message_builder.cpp:
	* rcsc/player/say_message_builder.h:
	- StaminaCapacityのメッセージタイプを追加

	* rcsc/coach/coach_player_object.h:
	* rcsc/coach/coach_world_state.cpp:
	- hearによるスタミナ情報更新を実装
	- CoachPlayerObjectにstamina(),effort()を追加

	* rcsc/coach/coach_audio_sensor.h:
	- コーディングスタイル修正

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_agent.h:
	- FreeformMessageの登録をスマートポインタに変更

2012-05-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/team_graphic.cpp:
	* rcsc/common/team_graphic.h:
	- コーディングスタイル修正
	- mapの値をconstポインタに変更

	* configure.ac:
	- 表示用の暫定バージョン番号として2012.05を設定

	* rcsc/coach/coach_world_model.cpp:
	* rcsc/coach/coach_world_model.h:
	- BeforeKickOffとTimeOverの間はCoachWorldStateを記録しない方針に変
	更．時刻に負の値を指定すると，curren stateを返すようにした．
	current stateは常に参照できる．

	* rcsc/coach/coach_world_model.h:
	- 時間を指定してCoachWorldStateを取得するメソッドを追加

	* rcsc/game_time.h:
	- コーディングスタイル修正

	* rcsc/coach/coach_world_model.cpp:
	* rcsc/coach/coach_world_model.h:
	* rcsc/coach/coach_world_state.h:
	- CoachWorldModelにCoachWorldStateのmapを追加